--- a/guides/advanced-testing-patterns/parameterized-tests.mdx
+++ b/guides/advanced-testing-patterns/parameterized-tests.mdx
@@ -1,285 +1,328 @@
 ---
-title: "Using Parameterized and Typed Tests"
-description: "Step-by-step examples on how to write value- and type-parameterized tests to maximize test coverage with less code. Learn to instantiate tests over multiple data sets or types, and how this pattern fits into robust project test suites."
+title: "Value and Type Parameterized Tests"
+description: "Step-by-step demonstration of creating parameterized and type-parameterized tests, including real use cases and advice for code reuse and coverage across multiple input values or data types."
 ---
 
-# Using Parameterized and Typed Tests
+# Value and Type Parameterized Tests
 
-**Master efficient test writing by leveraging GoogleTest's parameterized and typed testing frameworks. This guide offers step-by-step examples that help you write concise, maintainable, and robust tests covering multiple sets of data or types, minimizing code duplication and maximizing coverage.**
-
----
-
-## Overview of Parameterized and Typed Tests
-
-GoogleTest provides powerful mechanisms to write tests that run repeatedly with different inputs:
-
-- **Value-Parameterized Tests:** Run the same test logic with various values (parameters) without duplicating code.
-- **Typed Tests:** Repeat test logic across multiple types, verifying generic code or multiple implementations conform to the same behavior.
-
-These techniques streamline your test suites, allowing for comprehensive coverage while keeping your code clean.
+This guide provides a clear, step-by-step approach to creating **value-parameterized** and **type-parameterized tests** using GoogleTest. You'll learn how to reuse test logic across multiple input values or data types, ensuring broad coverage with minimal duplication. Practical use cases, examples, and tips are included to help you design robust and maintainable test suites.
 
 ---
 
-## 1. Writing Value-Parameterized Tests
+## 1. Workflow Overview
 
-Value-parameterized tests let you test a piece of code against different input values flexibly.
+### What This Guide Helps You Accomplish
+- Learn how to write **value-parameterized tests** that run the same test logic over different input values.
+- Discover how to write **type-parameterized tests** that run identical tests over multiple data types.
+- Understand how to instantiate these tests properly to cover diverse cases with concise code.
 
-### Workflow
+### Prerequisites
+- Familiarity with basic GoogleTest usage (`TEST`, `TEST_F`).
+- Understanding of C++ templates and types for type-parameterized tests.
+- GoogleTest included in your project with `#include <gtest/gtest.h>`.
 
-1. **Create a Test Fixture Class:** Derive from `testing::TestWithParam<T>`, where `T` is the parameter type.
-2. **Define Test Cases:** Use `TEST_P` macro along with the fixture to write tests accessing the parameter via `GetParam()`.
-3. **Instantiate Tests:** Use `INSTANTIATE_TEST_SUITE_P` with a parameter generator (like `Values()`, `Range()`, etc.) to specify the concrete values.
+### Expected Outcome
+By following this guide, you will confidently write and instantiate tests that:
+- Execute the same test logic repeatedly over supplied value sets (value-parameterized).
+- Execute the same test logic across multiple types (typed and type-parameterized tests).
+- Utilize provided parameter generators and instantiate tests with clear, user-friendly names.
 
-### Step-by-Step Example
+### Time Estimate
+About 20–30 minutes to read and implement your first parameterized tests.
+
+### Difficulty Level
+Intermediate: Requires some knowledge of C++ testing and templates.
+
+---
+
+## 2. Creating Value-Parameterized Tests
+
+### Step 1: Define a Parameterized Test Fixture
+Derive your fixture class from `testing::TestWithParam<T>`, where `T` is the parameter type.
 
 ```cpp
-#include <gtest/gtest.h>
-
-// Step 1: Define the fixture class.
-class FooTest : public ::testing::TestWithParam<const char*> {
-  // Optional setup/teardown and helper members
+class FooTest : public ::testing::TestWithParam<int> {
+  // Your setup and member functions
 };
-
-// Step 2: Define parameterized tests.
-TEST_P(FooTest, HandlesInput) {
-  const char* param = GetParam();
-  EXPECT_TRUE(foo.Blah(param));
-}
-
-TEST_P(FooTest, AdditionalCheck) {
-  const char* param = GetParam();
-  EXPECT_NE(strlen(param), 0);
-}
-
-// Step 3: Instantiate tests with parameter values.
-INSTANTIATE_TEST_SUITE_P(
-    StringTests, FooTest,
-    ::testing::Values("meeny", "miny", "moe")
-);
-
-// This will run each test in FooTest with each value.
 ```
 
-### Using Other Generators
+### Step 2: Write Parameterized Test Cases Using `TEST_P`
+Define tests that access the parameter via `GetParam()`.
 
-GoogleTest provides several built-in parameter generators for convenience:
+```cpp
+TEST_P(FooTest, HandlesValues) {
+  int param = GetParam();
+  EXPECT_GT(param, 0);
+  // Add your test logic using param.
+}
+```
 
-| Generator                | Description                                         |
-|--------------------------|-----------------------------------------------------|
-| `Range(begin, end[, step])` | Sequence of values in `[begin, end)` with step size. |
-| `Values(v1, v2, ..., vN)`    | A fixed set of explicit values.                      |
-| `ValuesIn(container)` or `ValuesIn(begin, end)` | Values from an array or STL container.             |
-| `Bool()`                     | Generates `false` and `true`.                        |
-| `Combine(g1, g2, ..., gN)`   | Cartesian product of multiple generators.            |
-
-Example combining generators:
+### Step 3: Instantiate the Test Suite with Parameters Using `INSTANTIATE_TEST_SUITE_P`
+Specify the parameters with GoogleTest parameter generators like `Values()`, `Range()`, `ValuesIn()`, or combinations.
 
 ```cpp
 INSTANTIATE_TEST_SUITE_P(
-    ComboTests, FooTest,
-    ::testing::Combine(::testing::Values("cat", "dog"), ::testing::Bool())
-);
+    PositiveIntegers, FooTest,
+    testing::Values(1, 10, 100));
 ```
 
-### Customizing Test Names
+- This runs the test for parameters 1, 10, and 100. Each instantiation generates a test with a unique name suffix.
 
-By default, test instances are named with indices. For clearer reports, provide a custom name generator function:
+### Practical Parameter Generators Overview
+| Generator         | Description                                                                                            |
+| ----------------- | -------------------------------------------------------------------------------------------------- |
+| `Range(start,end [,step])` | Produces sequential values starting from `start` up to but not including `end` with optional step. |
+| `Values(v1, v2, ..., vN)`   | Generate explicitly listed values.                                                                  |
+| `ValuesIn(container)`        | Generates values from any STL container or array.                                                  |
+| `Bool()`                    | Generates `false` and `true`.                                                                       |
+| `Combine(g1, g2, ..., gN)`  | Cartesian product, combines multiple generators to generate tuples of parameters.                   |
 
+### Step 4: (Optional) Customize Parameterized Test Naming
+By default, GoogleTest names parameterized tests with numerical suffixes. To improve readability:
+
+- Use the built-in `testing::PrintToStringParamName` for printable types.
+- Provide a custom naming function/functor that takes a `TestParamInfo` to produce valid test suffixes (alphanumeric and underscores only).
+
+Example of custom naming:
 ```cpp
 INSTANTIATE_TEST_SUITE_P(
-    NamedTests, FooTest,
-    ::testing::Values("cat", "dog"),
-    [](const ::testing::TestParamInfo<FooTest::ParamType>& info) {
-      std::string name = info.param;
-      // Sanitizes or modifies the name if needed
-      return name;
+    MyInstantiation, FooTest,
+    testing::Values(1, 2, 3),
+    [](const testing::TestParamInfo<FooTest::ParamType>& info) {
+      return "Value_" + std::to_string(info.param);
     });
 ```
 
+### Verification
+- Run your tests with `--gtest_list_tests` to confirm parameterized tests and names are generated.
+- Use filters like `--gtest_filter=MyInstantiation/FooTest.*` to run specific parameterized tests.
+
+### Common Pitfalls & Notes
+- Each `INSTANTIATE_TEST_SUITE_P` must have a unique prefix.
+- `INSTANTIATE_TEST_SUITE_P` instantiates *all* tests defined with `TEST_P` in the suite.
+- If you define `TEST_P` but do not instantiate, GoogleTest will report a failure unless tagged with `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST`.
+- If parameters are complex, overriding `PrintToString()` or providing custom naming helps test output clarity.
+
 ---
 
-## 2. Writing Typed Tests
+## 3. Creating Typed Tests
 
-Typed tests allow running the same test logic across different types, useful for testing templates or multiple implementations of an interface.
+Typed tests allow repeating the exact same test logic for different data types.
 
-### Workflow
-
-1. **Define a Fixture Template:** Create a class template derived from `testing::Test` parameterized by a type.
-2. **Declare Test Suite with Types:** Use `TYPED_TEST_SUITE` to associate the test suite with a list of types.
-3. **Write Typed Tests:** Use `TYPED_TEST` macros to define tests where type parameter is accessed via `TypeParam`.
-4. **Run Tests:** GoogleTest runs the tests across all specified types automatically.
-
-### Step-by-Step Example
+### Step 1: Declare a Test Fixture Template Class
+Create a class template deriving from `testing::Test`.
 
 ```cpp
-#include <gtest/gtest.h>
-
-// Step 1: Define a typed fixture template.
 template <typename T>
-class FooTypedTest : public ::testing::Test {
-protected:
-  T value_{};  // Default constructed value of type T
+class NumericTest : public testing::Test {
+ public:
+  T value_ = T(0);
 };
+```
 
-// Step 2: Specify the types to test.
-using MyTypes = ::testing::Types<int, double, char>;
-TYPED_TEST_SUITE(FooTypedTest, MyTypes);
+### Step 2: Define the List of Types
+Use the `::testing::Types<>` template to declare types.
 
-// Step 3: Write typed tests accessing TypeParam
-TYPED_TEST(FooTypedTest, DefaultConstructedIsZero) {
-  // TypeParam is the current type being tested.
-  EXPECT_EQ(this->value_, TypeParam{});
-}
+```cpp
+using NumericTypes = ::testing::Types<int, float, double>;
+``` 
 
-TYPED_TEST(FooTypedTest, PlusOne) {
-  TypeParam val = this->value_ + 1;
-  EXPECT_GT(val, this->value_);
+### Step 3: Associate the Types with Your Fixture Using `TYPED_TEST_SUITE`
+
+```cpp
+TYPED_TEST_SUITE(NumericTest, NumericTypes);
+```
+
+If your type list contains a single type, you may write only that type.
+
+### Step 4: Write Typed Tests with `TYPED_TEST`
+Within each test, refer to the type parameter as `TypeParam`. Access fixture members via `this->`.
+
+```cpp
+TYPED_TEST(NumericTest, IsZeroInitially) {
+  TypeParam expected = TypeParam(0);
+  EXPECT_EQ(this->value_, expected);
 }
 ```
 
-### Customizing Type Names
+You can define multiple tests within the same suite using `TYPED_TEST`.
 
-To generate meaningful test names based on type, provide a name generator class:
+### Step 5: Run Tests Normally
+Tests will run once for each type in the list with clear output names.
+
+### Customizing Type Names in Output
+Provide a name generator type with a static template `GetName(int)` method:
 
 ```cpp
-class MyTypeNames {
-public:
+class MyTypeName {
+ public:
   template <typename T>
   static std::string GetName(int) {
-    if (std::is_same<T, int>::value) return "int";
-    if (std::is_same<T, double>::value) return "double";
-    if (std::is_same<T, char>::value) return "char";
+    if constexpr (std::is_same_v<T, int>) return "int";
+    if constexpr (std::is_same_v<T, float>) return "float";
+    if constexpr (std::is_same_v<T, double>) return "double";
     return "unknown";
   }
 };
 
-TYPED_TEST_SUITE(FooTypedTest, MyTypes, MyTypeNames);
+TYPED_TEST_SUITE(NumericTest, NumericTypes, MyTypeName);
 ```
+
+### Notes
+- The test suite name is the fixture name.
+- `TYPED_TEST` replaces `TEST_F` when using typed tests.
+- The test framework creates separate tests per type.
 
 ---
 
-## 3. Writing Type-Parameterized Tests
+## 4. Creating Type-Parameterized Tests
 
-Type-parameterized tests extend typed tests by allowing definition and registration of test patterns independent of the types. Types can be specified elsewhere and instantiated multiple times.
+Type-parameterized tests form abstract test suites that can be instantiated repeatedly with different type lists.
 
-### Workflow
-
-1. Define a fixture template.
-2. Use `TYPED_TEST_SUITE_P` to declare the test suite.
-3. Define tests with `TYPED_TEST_P`.
-4. Register tests with `REGISTER_TYPED_TEST_SUITE_P`.
-5. Instantiate with `INSTANTIATE_TYPED_TEST_SUITE_P` specifying types.
-
-### Example
+### Step 1: Declare a Fixture Template and Register with `TYPED_TEST_SUITE_P`
 
 ```cpp
 template <typename T>
-class FooTypeParamTest : public ::testing::Test {};
+class MyTypeParamTest : public testing::Test {
+  // ...
+};
 
-TYPED_TEST_SUITE_P(FooTypeParamTest);
+TYPED_TEST_SUITE_P(MyTypeParamTest);
+```
 
-TYPED_TEST_P(FooTypeParamTest, BehavesCorrectly) {
+### Step 2: Define Type-Parameterized Tests using `TYPED_TEST_P`
+
+```cpp
+TYPED_TEST_P(MyTypeParamTest, TestSomething) {
   TypeParam val{};
-  EXPECT_EQ(val, TypeParam{});
+  EXPECT_TRUE(SomeCheck(val));
+}
+```
+
+Define as many tests as needed.
+
+### Step 3: Register Tests
+
+Register the test names to prepare for instantiation.
+
+```cpp
+REGISTER_TYPED_TEST_SUITE_P(MyTypeParamTest, TestSomething);
+```
+
+### Step 4: Instantiate Tests Using `INSTANTIATE_TYPED_TEST_SUITE_P`
+
+Supply the prefix, test fixture, and a list of types as before.
+
+```cpp
+using MyTypes = ::testing::Types<int, float>;
+INSTANTIATE_TYPED_TEST_SUITE_P(MyPrefix, MyTypeParamTest, MyTypes);
+```
+
+You can instantiate the same pattern multiple times with different type lists.
+
+### Summary of Differences
+| Typed Tests                         | Type-Parameterized Tests                  |
+|-----------------------------------|------------------------------------------|
+| Type list known at test definition| Type list supplied later, can instantiate multiple times |
+| Define test fixtures and types together| Define fixture and tests separately then instantiate|
+
+---
+
+## 5. Real-World Examples
+
+### Example: Value-Parameterized Test with Combinations
+
+```cpp
+class MathTest : public testing::TestWithParam<std::tuple<int, bool>> {};
+
+TEST_P(MathTest, WorksForMultipleInputs) {
+  int number;
+  bool flag;
+  std::tie(number, flag) = GetParam();
+  EXPECT_GE(number, 0);
+  if (flag) {
+    EXPECT_TRUE(number % 2 == 0);
+  }
 }
 
-REGISTER_TYPED_TEST_SUITE_P(FooTypeParamTest, BehavesCorrectly);
+INSTANTIATE_TEST_SUITE_P(
+    AllCases, MathTest,
+    testing::Combine(testing::Values(0, 2, 3), testing::Bool()));
+```
 
-using MyTypes = ::testing::Types<int, float>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyInstance, FooTypeParamTest, MyTypes);
+### Example: Typed Test Suite with Custom Type Names
+
+```cpp
+template <typename T>
+class ContainerTest : public testing::Test {
+ public:
+  T container_;
+};
+
+using Containers = ::testing::Types<std::vector<int>, std::list<int>>;
+
+class ContainerNames {
+ public:
+  template <typename T>
+  static std::string GetName(int) {
+    if constexpr (std::is_same_v<T, std::vector<int>>) return "Vector";
+    if constexpr (std::is_same_v<T, std::list<int>>) return "List";
+  }
+};
+
+TYPED_TEST_SUITE(ContainerTest, Containers, ContainerNames);
+
+TYPED_TEST(ContainerTest, IsEmptyInitially) {
+  EXPECT_TRUE(this->container_.empty());
+}
 ```
 
 ---
 
-## 4. Practical Tips and Best Practices
+## 6. Troubleshooting & Tips
 
-- Always give unique names to test suite instantiations when using `INSTANTIATE_TEST_SUITE_P` or `INSTANTIATE_TYPED_TEST_SUITE_P`.
-- Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST` if you define parameterized tests but don't instantiate them immediately.
-- Avoid underscores `_` in test and test suite names to prevent conflicts with GoogleTest's macro-generated class names.
-- When using complex parameters like tuples, consider using `Combine` to generate Cartesian products of parameter sets.
-- For custom parameter types and naming, always provide appropriate `PrintToString` or overload `operator<<` to improve test output readability.
-- Named test instances aid in debugging failures by showing parameter values explicitly.
+### Common Issues
+- **Tests not instantiated**: Ensure you call the appropriate `INSTANTIATE_TEST_SUITE_P` macros.
+- **Invalid test parameter names**: Custom names must be alphanumeric or underscores only; illegal characters cause registration errors.
+- **Test failures not related to logic**: Check that parameter types and fixture parameter types are compatible.
+- **Name collisions in typed tests**: Customize type name generation to avoid ambiguous output.
 
----
+### Best Practices
+- Use typed and parameterized tests to **avoid duplicating test code**.
+- Customize parameter names for clearer **failure messages** and filtering.
+- For complex parameters, teach GoogleTest how to print them using `PrintTo()` or `AbslStringify()`.
+- Use `Combine()` sparingly — the Cartesian product grows exponentially with parameters.
+- Remember that `INSTANTIATE_TEST_SUITE_P` executes after `InitGoogleTest()`. Use runtime values carefully.
 
-## 5. Troubleshooting Common Issues
-
-- **Tests not running after instantiation:** Ensure your `INSTANTIATE_TEST_SUITE_P` macros are placed in source files (not inside functions) and the parameter generator is not empty.
-
-- **Compilation errors with parameterized tests:** Confirm the test fixture derives from `TestWithParam` or appropriately inherits from `Test` and `WithParamInterface`.
-
-- **Duplicate or conflicting test names:** Avoid underscores and ensure unique instantiation names.
-
-- **Dangling references in ConvertGenerator lambdas:** Provide explicit template arguments or use value types rather than references in lambdas to avoid lifetime issues.
-
-- **Test parameter printing issues:** Define `PrintToString` or `PrintTo` overloads for custom types.
+### Performance & Coverage
+- Parameterized tests can dramatically increase test coverage with little code.
+- Avoid overly large parameter ranges to keep test runtime reasonable.
 
 ---
 
-## Next Steps & Additional Resources
+## 7. Next Steps & Related Content
 
-- Explore the [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) for beginner-friendly introductions.
-- Read the [Value-Parameterized Tests section](https://github.com/google/googletest/blob/main/docs/advanced.md#value-parameterized-tests) in the Advanced Topics.
-- Learn about [Typed and Type-Parameterized Tests](https://github.com/google/googletest/blob/main/docs/advanced.md#typed-tests).
-- Dive into the [Testing Reference](https://github.com/google/googletest/blob/main/docs/reference/testing.md) for detailed macro and function documentation.
-
----
-
-This guide prepares you to leverage parameterized and typed testing in GoogleTest, enabling you to maximize test coverage, reduce code duplication, and enhance the clarity and maintainability of your test suites.
+- Learn [Writing Your First Unit Test](/guides/getting-started-workflows/first-cpp-test) to build foundations.
+- Explore [Mocking Basics](/guides/getting-started-workflows/mocking-basics) for mock objects in parameterized contexts.
+- See [Specifying Names for Value-Parameterized Test Parameters](/docs/advanced.md#value-parameterized-tests) for advanced naming.
+- Review [Typed Tests and Type-Parameterized Tests](/docs/reference/testing.md#TYPED_TEST_SUITE) in the official testing reference.
 
 ---
 
-## Related Documentation
-
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
-- [Advanced GoogleTest Topics](https://github.com/google/googletest/blob/main/docs/advanced.md)
-- [Testing Reference](https://github.com/google/googletest/blob/main/docs/reference/testing.md)
-- [Writing Your First Unit Test Guide](https://github.com/google/googletest/blob/main/guides/core-testing-workflows/writing-your-first-test.mdx)
+### Additional Resources
+- [GoogleTest Primer](docs/primer.md) for overall basics.
+- [Parameterized & Typed Tests Reference](docs/reference/testing.md#TEST_P)
+- Sample code in Googletest GitHub repository, e.g., `samples/sample7_unittest.cc`, `sample6_unittest.cc`.
 
 ---
 
-## Summary of Key Macros & Functions
-
-| Macro / Function               | Purpose                                    |
-|-------------------------------|--------------------------------------------|
-| `TEST_P`                      | Defines a value-parameterized test          |
-| `INSTANTIATE_TEST_SUITE_P`    | Instantiates a value-parameterized test suite |
-| `TYPED_TEST_SUITE`            | Associates a fixture template with types to test |
-| `TYPED_TEST`                  | Defines a typed test                        |
-| `TYPED_TEST_SUITE_P`          | Declares a type-parameterized test suite   |
-| `TYPED_TEST_P`                | Defines a type-parameterized test           |
-| `REGISTER_TYPED_TEST_SUITE_P` | Registers tests within a type-parameterized suite |
-| `INSTANTIATE_TYPED_TEST_SUITE_P` | Instantiates a type-parameterized test suite |
+### Practical Tips at a Glance
+<Tip>
+- Always instantiate your parameterized test suites to avoid false failures.
+- Customize test name generation for better test reports.
+- Use `GetParam()` carefully — it's a copy; consider const ref if needed.
+- Typed tests require template fixture classes.
+- Avoid underscores in test and suite names to prevent conflicts.
+</Tip>
 
 ---
-
-## Sample Mermaid Diagram: Parameterized Test Flow
-
-```mermaid
-flowchart TD
-  subgraph ValueParameterized
-    DefineFixture["Define fixture class: TestWithParam<T>"] --> DefineTests["Define tests using TEST_P"]
-    DefineTests --> Instantiate["Instantiate suite with INSTANTIATE_TEST_SUITE_P"]
-    Instantiate --> RunTests["GoogleTest runs each test per parameter"]
-  end
-
-  subgraph TypedTests
-    DefineTemplateFixture["Define fixture class template"] --> AssociateTypes["Associate types with TYPED_TEST_SUITE"]
-    AssociateTypes --> DefineTypedTests["Write tests using TYPED_TEST"]
-    DefineTypedTests --> RunTypedTests["GoogleTest runs each test per type"]
-  end
-
-  subgraph TypeParameterizedTests
-    DefineTemplateFixture2["Define fixture class template"] --> DeclareTypeParamSuite["Declare suite with TYPED_TEST_SUITE_P"]
-    DeclareTypeParamSuite --> DefineTypeParamTests["Define tests with TYPED_TEST_P"]
-    DefineTypeParamTests --> RegisterTests["Register tests REGISTER_TYPED_TEST_SUITE_P"]
-    RegisterTests --> InstantiateTypeParam["Instantiate with INSTANTIATE_TYPED_TEST_SUITE_P"]
-    InstantiateTypeParam --> RunTypeParamTests["Tests run per instantiated type"]
-  end
-
-  classDef boxStyle fill:#f9f9f9,stroke:#333,stroke-width:1px;
-  class DefineFixture,DefineTests,Instantiate,RunTests,
-        DefineTemplateFixture,AssociateTypes,DefineTypedTests,RunTypedTests,
-        DefineTemplateFixture2,DeclareTypeParamSuite,DefineTypeParamTests,RegisterTests,
-        InstantiateTypeParam,RunTypeParamTests boxStyle;
-```
